--- a/build.gradle
+++ b/build.gradle
@@ -26,13 +26,16 @@ repositories {
 ext['hibernate.version'] = '5.2.11.Final'
 
 
+
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-web')
     compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.2.15'
-    runtimeOnly 'com.h2database:h2'
-    compileOnly 'org.projectlombok:lombok'
+    compile('org.springframework.boot:spring-boot-devtools')
+//    compile("org.mariadb.jdbc:mariadb-java-client")
+    runtime('com.h2database:h2')
+    compileOnly('org.projectlombok:lombok')
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
