--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ deploy:
         repo: bawker/spring-webservice
         branch: master
 
-# CI 실행 완료시 메일로 알람.
+# CI 실행 완료시 메일로 알람
 notifications:
   email:
     recipients:
