--- a/.travis.yml
+++ b/.travis.yml
@@ -36,12 +36,13 @@ deploy:
     on:
       repo: bawker/spring-webservice #Github 주소
       branch: master
+      
 
   - provider: codedeploy
       access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
       secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
       bucket: bawker-spring-webservice-deploy # S3 버킷
-      key: springboot-webservice.zip # 빌드 파일을 압축해서 전달
+      key: springboot-webservice.zip # S3 버킷에 저장된 springboot-webservice.zip 파일을 EC2로 배포
       bundle_type: zip
       application: bawker-springboot-webservice # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
       deployment_group: bawker-springboot-webservice # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
