--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.2.15'
+//    compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.2.15'
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile('org.springframework.boot:spring-boot-devtools')
     compile("org.mariadb.jdbc:mariadb-java-client")
     runtime('com.h2database:h2')
