--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
 //    compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.2.15'
     compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
     compile('org.springframework.boot:spring-boot-devtools')
     compile("org.mariadb.jdbc:mariadb-java-client")
     runtime('com.h2database:h2')
