--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,8 @@ spring:
       enabled: true
     thymeleaf:
       cache: false
+  mustache:
+    expose-session-attributes: true   #뷰페이지에서 session에 담긴 정보 가져올때 필요함
 
 
 # 운영 환경
