--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 //    compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.2.15'
 //    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile 'org.springframework.boot:spring-boot-starter-mustache'
-    compile group: 'com.github.sviperll', name: 'mustache-maven-plugin', version: '0.23-rc2'
+//    compile group: 'com.github.sviperll', name: 'mustache-maven-plugin', version: '0.23-rc2'
+    implementation 'com.github.sviperll:mustache-maven-plugin:0.23'
     implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
     compile('org.springframework.boot:spring-boot-devtools')
     compile("org.mariadb.jdbc:mariadb-java-client")
