--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,9 +39,16 @@ spring.profiles.include: real-db
 server:
   port: 8081
 
+spring:
+  thymeleaf:
+    prefix: classpath:/templates
 ---
 spring.profiles: set2
 spring.profiles.include: real-db
 
 server:
   port: 8082
+
+spring:
+  thymeleaf:
+    prefix: classpath:/templates
