--- a/.travis.yml
+++ b/.travis.yml
@@ -5,22 +5,25 @@ jdk:
 before_install:
   - chmod +x gradlew
 
+# 오직 master브랜치에 push될때만 수행됩니다.
 branches:
   only:
     - master
 
 # Travis CI 서버의 Home
+# Gradle을 통해 의존성을 받게 되면 이를 해당 디렉토리에 캐시하여, 같은 의존성은 다음 배포때부터 다시 받지 않도록 설정합니다.
 cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
+# master 브랜치에 PUSH 되었을때 수행하는 명령어입니다.
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r springboot-webservice *
-  - mkdir -p deploy
-  - mv springboot-webservice.zip deploy/springboot-webservice.zip
+  - zip -r springboot-webservice *  # 현재 위치의 모든 파일을 springboot-webservice이름으로 압축(zip)
+  - mkdir -p deploy                 # deploy라는 디렉토리를 Travis CI가 실행중인 위치에서 생성
+  - mv springboot-webservice.zip deploy/springboot-webservice.zip  # springboot-webservice.zip 파일을 deploy/springboot-webservice.zip로 이동
 
 deploy:
   - provider: s3
