파일 업로드 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,8 @@ spring:
   mustache:
     expose-session-attributes: true   #뷰페이지에서 session에 담긴 정보 가져올때 필요함
 
+upload:
+  path: C:\Users\sehyu\IdeaProjects\spring-webservice\src\main\resources\static\image
 
 # 운영 환경
 ---
@@ -44,6 +46,10 @@ server:
 spring:
   thymeleaf:
     prefix: classpath:/templates
+
+upload:
+  path: classpath:/static/image
+
 ---
 spring.profiles: set2
 spring.profiles.include: real-db
